Changes towards version 0.2:
- Biadapt and biadv scalers now work in OpenGL mode too -Mika
- Fixed lockup when fastforwarding through orz comm -PBlue
- A new windows installer is now in builds/win32_install -PBlue
- Added '-a' switch to go between OpenAL and MixSDL at runtime -PBlue
- Melnorme will pronounce numbers now -fOSSiL
- Added icons to win32 builds (MSVC and mingw) -fOSSiL
- Removed the GraphicStrength code, since all that is handled with
  an arithmetic blit routine outside of the drawing thread
- Added an improved version of biadapt scaling filter,
  working name "biadv" (use --scale=biadv) -fOSSiL
- Removed SDL_mixer sound module
- TFB_FlushGraphics keeps track of smallest bounding box that requires
  updating, allowing for faster scaling
- Added a TFB_Canvas data buffer to let TFB_Image be more accessible
- Added new graphics primitives
- Added 'smooth' scolling for ff, frev (similar to the 3DO) - PhracturedBlue
- New streaming code for openal/mixsdl.  supports ff/frev in subtitles -PBlue
- New sound module "mixsdl" (experimental) -fOSSiL
- Fixed overlapping subtitle text while switch tracks -PhracturedBlue
- New flash-thread cacheing scheme - PhracturedBlue
- Voice-over / subtitle synch is done - PhracturedBlue
- Optimized DCQ to be much smaller and faster
- Added stat data in outfit screen (use --font=pc) - from Nic
- Added fixed introx.mod, from fOSSiL
- Fixed Orz .mod file, from fOSSiL
- Added vertical alignment for subtitles (text runs off screen fix)-from Nic
- Updated infinity text/symbol for RUs - from fOSSiL, Nic
- Split away DCQ-specific code into its own header file
- Added correct lander font - from fOSSiL
- Added support for multiple menu hierarchies, and a few PC hiers. -PBlue
- Fixed a potential semaphore race when suspending clock -PhracturedBlue
- Function name conflict fixes for Mac OSX -by peterb
- Minor fixes for pc-fonts (Outfit screen, gradient color swap) -by Nic
- DCQ is now accessed uniformly by routines in gfx_common.c